{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 161,
  "lineage": "6c8bf619-3c6e-da64-fd5c-8b1b0c223710",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:loadbalancer/app/one-ecs-alb/90ae3744a8ad2a52",
            "arn_suffix": "app/one-ecs-alb/90ae3744a8ad2a52",
            "desync_mitigation_mode": "defensive",
            "dns_name": "one-ecs-alb-467202449.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:loadbalancer/app/one-ecs-alb/90ae3744a8ad2a52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "one-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02559d0e04d814e68",
              "sg-04a30cfdbce947a3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a46e36270c312f63"
              },
              {
                "subnet_id": "subnet-0ca1074e2c0d07f46"
              }
            ],
            "subnets": [
              "subnet-0a46e36270c312f63",
              "subnet-0ca1074e2c0d07f46"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-alb",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-alb",
              "Project": "one-ecs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0e99889953ef648e9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:listener/app/one-ecs-alb/90ae3744a8ad2a52/92f7915fd74617de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:targetgroup/one-ecs-one-ecs/3dc319102086b3f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:listener/app/one-ecs-alb/90ae3744a8ad2a52/92f7915fd74617de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:loadbalancer/app/one-ecs-alb/90ae3744a8ad2a52",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "one-ecs"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:targetgroup/one-ecs-one-ecs/3dc319102086b3f5",
            "arn_suffix": "targetgroup/one-ecs-one-ecs/3dc319102086b3f5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:981715094000:targetgroup/one-ecs-one-ecs/3dc319102086b3f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "one-ecs-one-ecs",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-one-ecs",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-one-ecs",
              "Project": "one-ecs"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:security-group/sg-02559d0e04d814e68",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02559d0e04d814e68",
            "ingress": [],
            "name": "one-ecs-alb-20230511144739175800000006",
            "name_prefix": "one-ecs-alb-",
            "owner_id": "981715094000",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-alb",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-alb",
              "Project": "one-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:security-group/sg-04a30cfdbce947a3e",
            "description": "Service security group",
            "egress": [],
            "id": "sg-04a30cfdbce947a3e",
            "ingress": [],
            "name": "one-ecs-service-20230511144739181100000007",
            "name_prefix": "one-ecs-service-",
            "owner_id": "981715094000",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-service",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-service",
              "Project": "one-ecs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.30.0/24",
              "10.100.40.0/24"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-448503840",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04a30cfdbce947a3e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-189487015",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04a30cfdbce947a3e",
            "security_group_rule_id": "sgr-0ed446cd31a0107c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:subnet/subnet-0b66f3e27bd4d2565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.100.30.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b66f3e27bd4d2565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981715094000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:security-group/sg-069c9618bd8375a90",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-069c9618bd8375a90",
            "ingress": [],
            "name": "one-ecs-service-20230511144741691300000009",
            "name_prefix": "one-ecs-service-",
            "owner_id": "981715094000",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "one-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3000,
            "id": "sgrule-3613840045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-069c9618bd8375a90",
            "security_group_rule_id": "sgr-04c3712de34dca095",
            "self": false,
            "source_security_group_id": "sg-04a30cfdbce947a3e",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-978513264",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-069c9618bd8375a90",
            "security_group_rule_id": "sgr-080fd8d0aa02298db",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:network-acl/acl-06677c1ebb31b720d",
            "default_network_acl_id": "acl-06677c1ebb31b720d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06677c1ebb31b720d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "981715094000",
            "subnet_ids": [
              "subnet-09cc840631c36f4c8",
              "subnet-0a46e36270c312f63",
              "subnet-0b66f3e27bd4d2565",
              "subnet-0ca1074e2c0d07f46"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:route-table/rtb-0b4346bb1c8dd1b39",
            "default_route_table_id": "rtb-0b4346bb1c8dd1b39",
            "id": "rtb-0b4346bb1c8dd1b39",
            "owner_id": "981715094000",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:security-group/sg-0c651f2180de7bdc5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c651f2180de7bdc5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "981715094000",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-default",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b70f1b910d9bc8de",
            "domain": "vpc",
            "id": "eipalloc-0b70f1b910d9bc8de",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-75-77-192.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.77.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:internet-gateway/igw-0a3749be5182285ee",
            "id": "igw-0a3749be5182285ee",
            "owner_id": "981715094000",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b70f1b910d9bc8de",
            "association_id": "eipassoc-01cbd5b7ae11617b7",
            "connectivity_type": "public",
            "id": "nat-0ebe8ee6c7e38231f",
            "network_interface_id": "eni-0721056ec7a5d9e03",
            "private_ip": "10.100.10.95",
            "public_ip": "35.75.77.192",
            "subnet_id": "subnet-0ca1074e2c0d07f46",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-ap-northeast-1a",
              "Project": "one-ecs"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063ea8e24696e52b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ebe8ee6c7e38231f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063ea8e24696e52b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a3749be5182285ee",
            "id": "r-rtb-03d67bfef4fd0c55c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d67bfef4fd0c55c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:route-table/rtb-063ea8e24696e52b0",
            "id": "rtb-063ea8e24696e52b0",
            "owner_id": "981715094000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private",
              "Project": "one-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:route-table/rtb-03d67bfef4fd0c55c",
            "id": "rtb-03d67bfef4fd0c55c",
            "owner_id": "981715094000",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public",
              "Project": "one-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076c4ede8c5cd818f",
            "route_table_id": "rtb-063ea8e24696e52b0",
            "subnet_id": "subnet-0b66f3e27bd4d2565"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018a8aa763fbcdef6",
            "route_table_id": "rtb-063ea8e24696e52b0",
            "subnet_id": "subnet-09cc840631c36f4c8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b17ab9bf6e35c8f",
            "route_table_id": "rtb-03d67bfef4fd0c55c",
            "subnet_id": "subnet-0ca1074e2c0d07f46"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83ca8ace70d0571",
            "route_table_id": "rtb-03d67bfef4fd0c55c",
            "subnet_id": "subnet-0a46e36270c312f63"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:subnet/subnet-0b66f3e27bd4d2565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b66f3e27bd4d2565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981715094000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:subnet/subnet-09cc840631c36f4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cc840631c36f4c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981715094000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private-ap-northeast-1c",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-private-ap-northeast-1c",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:subnet/subnet-0ca1074e2c0d07f46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca1074e2c0d07f46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981715094000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public-ap-northeast-1a",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:subnet/subnet-0a46e36270c312f63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a46e36270c312f63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981715094000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public-ap-northeast-1c",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc-public-ap-northeast-1c",
              "Project": "one-ecs"
            },
            "vpc_id": "vpc-0e99889953ef648e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:981715094000:vpc/vpc-0e99889953ef648e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-06677c1ebb31b720d",
            "default_route_table_id": "rtb-0b4346bb1c8dd1b39",
            "default_security_group_id": "sg-0c651f2180de7bdc5",
            "dhcp_options_id": "dopt-03c5b24b75a21b58a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e99889953ef648e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4346bb1c8dd1b39",
            "owner_id": "981715094000",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc",
              "Project": "one-ecs"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "one-ecs-vpc",
              "Project": "one-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}